<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_widget_previous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:id="@+id/previous_event"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="top|left"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:padding="5dp"
                android:src="@drawable/arrow_left" />
        </LinearLayout>

        <TextView
            style="@style/textview.16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/healthifyMe_title"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/layout_widget_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:id="@+id/next_event"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="top|right"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:padding="5dp"
                android:src="@drawable/arrows_right" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/black_transparent"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/textview.12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/open_time"/>

            <TextView
                style="@style/textview.12sp"
                android:id="@+id/textview_widget_openTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textview.12sp"
                android:id="@+id/textview_widget_timeInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time_interval"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/textview.12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/close_time"/>

            <TextView
                style="@style/textview.12sp"
                android:id="@+id/textview_widget_closeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/textview.16sp"
        android:id="@+id/textview_widget_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/open_link"/>

    <TextView
        style="@style/textview.14sp"
        android:id="@+id/textview_widget_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/description" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageview_widget"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_not_available" />

        <TextView
            style="@style/textview.16sp"
            android:id="@+id/textview_widget_challengeType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:padding="5dp"
            android:background="@color/black_dark_transparent"/>


    </FrameLayout>
</LinearLayout>
